tests/paczka1/small_fuzzy/18532454.err
Error in line 4: S4 S322 7,1
Error in line 3: f9PVzbdV S322 92,5
Error in line 10: ShUMF6ZKZYY S79 -1,5
